# swwwitch

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
app/: main.py
swwwitch/: main.py
